css fix: removing white space bottom

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,6 +86,7 @@ main {
   background: var(--color-dark-blue);
   overflow: auto;
   width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
 }
